messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging_app-blue
  labels:
    app: messaging_app
    version: blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: messaging_app
      version: blue
  template:
    metadata:
      labels:
        app: messaging_app
        version: blue
    spec:
      containers:
      - name: messaging_app
        image: stevecobidex/messaging_app-web:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 20
