messaging_app/messaging_app/ingress.yaml
#!/bin/bash

kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/cloud/deploy.yaml

cat <<EOF > ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: messaging-service
            port:
              number: 8000
EOF

kubectl apply -f ingress.yaml

kubectl get ingress
